resources/assets/less/bem/beatmap-discussion-post.less
/**
 *    Copyright (c) ppy Pty Ltd <contact@ppy.sh>.
 *
 *    This file is part of osu!web. osu!web is distributed with the hope of
 *    attracting more community contributions to the core ecosystem of osu!.
 *
 *    osu!web is free software: you can redistribute it and/or modify
 *    it under the terms of the Affero GNU General Public License version 3
 *    as published by the Free Software Foundation.
 *
 *    osu!web is distributed WITHOUT ANY WARRANTY; without even the implied
 *    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 *    See the GNU Affero General Public License for more details.
 *
 *    You should have received a copy of the GNU Affero General Public License
 *    along with osu!web.  If not, see <http://www.gnu.org/licenses/>.
 */

.beatmap-discussion-post {
  @_top: beatmap-discussion-post;

  @_info-text-size: @font-size--small;

  @_discussion-text-size: @font-size--title-small-2;
  @_reply-text-size: @font-size--normal-2;

  @_content-gutter-base: 15px;

  transition: background-color .1s ease-in-out;

  &--discussion {
    min-width: 0;

    @media @desktop {
      flex: 1;
    }
  }

  &--new-reply {
    background-color: @osu-colour-b5;
    border-radius: 0 0 @border-radius-base @border-radius-base;
  }

  &--new-reply-placeholder {
    padding: 10px;
    display: flex;
    justify-content: flex-end;
    background-color: transparent;
  }

  &--unread {
    &::before {
      .full-size();
      content: ' ';
      background-color: @blue-darker;
      width: 5px;
    }
  }

  &__action {
    margin: 0 5px;
    text-transform: lowercase;

    &--button {
      .reset-input();
      .link-plain();
      .link-default();
      // reset function above overrides margin
      margin: 0 5px;
      font-size: @font-size--small;
    }

    &--cancel {
      .reset-input();
      position: absolute;
      color: @osu-colour-f1;
      top: 0px;
      right: 0px;
      width: @beatmap-discussion--reply-padding;
      height: @beatmap-discussion--reply-padding;
    }
  }

  &__actions {
    display: flex;

    .@{_top}--editing & {
      justify-content: flex-end;
    }

    .@{_top}--new-reply & {
      justify-content: flex-end;
    }

    .@{_top}--editing.@{_top}--reply & {
      margin-top: 5px;
    }
  }

  &__actions-group {
    display: flex;
    align-items: center;
    margin: 0 -5px;
  }

  &__avatar-container {
    margin-right: 10px;
    flex: none;
    display: flex;
    flex-direction: column;
    width: @beatmap-discussion--avatar-size;
  }

  &__content {
    display: flex;
    padding: 10px @_content-gutter-base;
    flex-direction: column;
    flex: none;
    min-width: 0;

    @media @desktop {
      flex-direction: row;
      flex: 1;
    }

    .@{_top}--reply & {
      // override padding for discussion previews
      .beatmap-discussion--preview &,
      .beatmap-discussion-review-post-embed & {
        padding: 10px @_content-gutter-base;
      }

      @media @desktop {
        padding-left: @beatmap-discussion--reply-padding;
        padding-right: @beatmap-discussion--reply-padding;
      }
    }

    .@{_top}--new-reply & {
      padding-bottom: 0;
    }
  }

  &__footer {
    padding: 10px;

    &--notice {
      padding-top: 0;
      padding-bottom: 0;
      display: flex;
      align-items: flex-end;
      font-size: @font-size--normal;
      color: @osu-colour-f1;
    }

    .@{_top}--reply & {
      padding-left: @_content-gutter-base;
      padding-right: @_content-gutter-base;

      @media @desktop {
        padding-left: @beatmap-discussion--reply-padding;
        padding-right: @beatmap-discussion--reply-padding;
      }
    }
  }

  &__info {
    font-size: @_info-text-size;
    margin-right: 10px;
    color: @osu-colour-f1;

    &--edited {
      font-style: italic;
    }
  }

  &__info-container {
    display: flex;
    flex-wrap: wrap;

    .@{_top}--reply & {
      &::after {
        content: '';
        height: 1px;
        align-self: center;
        flex: 1;
      }
    }
  }

  &__info-user {
    .link-plain();
    .link-default();
    opacity: 0.5;
    font-weight: 600;
  }

  &__message {
    .content-font();
    word-wrap: break-word;
    margin-bottom: 10px;
    color: white;

    .@{_top}--discussion & {
      font-size: @_discussion-text-size;
    }

    .@{_top}--reply & {
      font-size: @_reply-text-size;
    }

    .@{_top}--deleted & {
      opacity: 0.5;
      font-style: italic;
    }

    &::placeholder {
      color: @osu-colour-f1;
    }

    &--editor {
      .reset-input();
      width: 100%;
      resize: vertical;
      min-height: 3em;

      // --reply part to override top modifier
      &, .@{_top}--reply & {
        font-size: @font-size--phone-input;

        @media @desktop {
          font-size: @_reply-text-size;
        }
      }
    }
  }

  &__message-container {
    min-width: 0;
    display: flex;
    flex-direction: column;
    flex: none;

    @media @desktop {
      flex: 1;
    }
  }
}

